--- a/02ENL.ipynb
+++ b/02ENL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ENL_cerrados.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOZDplLlbq0rABP3u78W3dO",
+      "authorship_tag": "ABX9TyPhK5V/XqpVM8wkIonJf9XU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,7 @@
         "import numpy as np\n",
         "from tabulate import tabulate"
       ],
-      "execution_count": 1,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -86,7 +86,7 @@
         "  print(tabulate(tabla,columnas,showindex=True))\n",
         "  return x"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -108,7 +108,7 @@
       "metadata": {
         "id": "2E7syQOuSUxE"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -163,6 +163,54 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [
+        "from scipy import optimize\n",
+        "f = #<--- define la funcion\n",
+        "r = optimize.bisect() #<--- llamar a la funcion bisect(f,x0,x1)\n",
+        "print(r)"
+      ],
+      "metadata": {
+        "id": "0MuRnm8NBUb2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import sympy as sp\n",
+        "x,y = sp.symbols('x y')\n",
+        "fx = sp.exp(x)*sp.sin(x) + y\n",
+        "#sp.diff(fx,y)\n",
+        "#sp.integrate(fx,x)\n",
+        "#sp.integrate(fx,[x,[0,1]]).evalf()\n",
+        "#sp.limit(fx,x,-np.inf)"
+      ],
+      "metadata": {
+        "id": "5gJJAUWvD2DC",
+        "outputId": "698ab2a3-450a-4d90-e8d0-a0eb1effc1c3",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 39
+        }
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "y"
+            ],
+            "text/latex": "$\\displaystyle y$"
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "-2Ljcu9O5A1f"
@@ -197,7 +245,7 @@
         "  print(tabulate(tabla,columnas,showindex=True))\n",
         "  return x"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -237,7 +285,6 @@
         "id": "1tyuyuO0Nr_k"
       },
       "source": [
-        "from plotly.io import show\n",
         "def nr(f,df,x,tol=1e-5):\n",
         "  tabla = []\n",
         "  columnas=['x','f(x)','df(x)']\n",
@@ -250,7 +297,7 @@
         "  print(tabulate(tabla,columnas,showindex=True))\n",
         "  return x"
       ],
-      "execution_count": 9,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -263,6 +310,21 @@
       ],
       "metadata": {
         "id": "H-cPy6xehgwy"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from scipy import optimize\n",
+        "f = #<--- define la funcion\n",
+        "df = #<--- define la derivada\n",
+        "r = optimize.newton() #<--- llamar a la funcion newton(f,x0,df)\n",
+        "print(r)"
+      ],
+      "metadata": {
+        "id": "zgV-va40B_4B"
       },
       "execution_count": null,
       "outputs": []
@@ -298,7 +360,7 @@
         "  print(tabulate(tabla,columnas,showindex=True))\n",
         "  return x"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -315,60 +377,18 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "bHI4qs4u5qj1"
-      },
-      "source": [
-        "##Metodo de Muller"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "f3kjqMY-RSfD"
       },
       "source": [
-        "def muller(f,x0,x1,x2,tol=1e-5):\n",
-        "  tabla=[]\n",
-        "  columnas=['x0','x1','x2','x3','f(x0)','f(x1)','f(x2)','f(x3)']\n",
-        "  x3 = x0\n",
-        "  it = 0\n",
-        "  while np.abs(f(x3))>tol:\n",
-        "    d1 = #<--- calcular la diferencia f[x1,x0]\n",
-        "    d2 = #<--- calcular la diferencia f[x2,x1]\n",
-        "    d3 = #<--- calcular la segunda diferencia f[x2,x1,x0]\n",
-        "    a = d3\n",
-        "    b = d1-a*(x0+x1)\n",
-        "    c = f(x0)+x0*(a*x1-d1)\n",
-        "    den1 =-b+np.sqrt(b**2-4*a*c+0j)\n",
-        "    den2 =-b-np.sqrt(b**2-4*a*c+0j)\n",
-        "    if np.abs(den1)>np.abs(den2):\n",
-        "      x3 = #<--- calcular x3 = 2c/den1\n",
-        "    else:\n",
-        "      x3 = #<--- calcular x3 = 2c/den2\n",
-        "    iter = [x0,x1,x2,x3,f(x0),f(x1),f(x2),f(x3)]\n",
-        "    tabla.append(iter)\n",
-        "    it += 1\n",
-        "    x0 = #<--- asignar x1\n",
-        "    x1 = #<--- asignar x2\n",
-        "    x2 = #<--- asignar x3\n",
-        "  print(tabulate(tabla,columnas,showindex=True))\n",
-        "  return x3"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "f =  #<--- defina la funcion a resolver\n",
-        "r =  #<--- hacer la llamada al metodo de muller\n",
+        "from scipy import optimize\n",
+        "\n",
+        "f = #<--- define la funcion\n",
+        "\n",
+        "r = optimize.newton() #<--- llamar a la funcion newton(f,x0=,x1=)\n",
         "print(r)"
       ],
-      "metadata": {
-        "id": "uxg5Y_SajpTn"
-      },
       "execution_count": null,
       "outputs": []
     },
@@ -406,303 +426,12 @@
       "cell_type": "code",
       "source": [
         "f =  #<--- defina la funcion a resolver\n",
-        "r,t =  #<--- hacer la llamada al metodo de punto fijo\n",
-        "print(r)\n",
-        "t"
+        "r =  #<--- hacer la llamada al metodo de punto fijo\n",
+        "print(r)"
       ],
       "metadata": {
         "id": "JRu9PX_QjttY"
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "h_eTqqkK5xme"
-      },
-      "source": [
-        "##Metodo de Wegstein"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "__Dq1pBDm5Qo"
-      },
-      "source": [
-        "def wegstein(x0,g,tol=1e-5):\n",
-        "  tabla=[]\n",
-        "  columnas=['x3','g(x3)']\n",
-        "  x1=g(x0)\n",
-        "  x2=g(x1)\n",
-        "  x3=x2\n",
-        "  while np.abs(x3-g(x3))>tol:\n",
-        "    x3 =( x1*g(x2)-x2*g(x1))/(x1 -g(x1)-x2+g(x2))\n",
-        "    iter=[x3,g(x3)]\n",
-        "    tabla.append(iter)\n",
-        "    it+=1\n",
-        "    x1=x2\n",
-        "    x2=x3\n",
-        "  print(tabulate(tabla,columnas,showindex=True))\n",
-        "  return x3"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "f =  #<--- defina la funcion a resolver\n",
-        "r =  #<--- hacer la llamada al metodo de wegstein\n",
-        "print(r)"
-      ],
-      "metadata": {
-        "id": "0ywnPEs4jyv1"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ijPo6Bdg55Jk"
-      },
-      "source": [
-        "##Ejemplos"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "9MnB9SRX6S_G"
-      },
-      "source": [
-        "1. Primero se define la funcion a resolver, recuerde que debe estar en la forma $f(x)=0$"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "d_aEB3SOAG3D"
-      },
-      "source": [
-        "def f(x):\n",
-        "  return x**2-2"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "UgiUcTyg7NHa"
-      },
-      "source": [
-        "2. Se grafica para observar el comportamiento de la funcion"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "0NAqJjHX7MY3"
-      },
-      "source": [
-        "import plotly.express as xp\n",
-        "x=np.linspace(-10,10)\n",
-        "\n",
-        "fig = xp.line(x=,y=,\n",
-        "              markers='line+markers',\n",
-        "              labels={'x':'Eje x','y':'Eje y'},\n",
-        "              title='Mi grafica') #<--- completar los parametros a graficar\n",
-        "\n",
-        "fig.show()"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "S227NOGI6igX"
-      },
-      "source": [
-        "3. Se aplica el metodo numerico para obtener la raiz de la ecuacion pasandole los parametros que requiere"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "LEESHaqS6zN6"
-      },
-      "source": [
-        "xr,tabla=biseccion(f,0,2)\n",
-        "print(xr)\n",
-        "tabla"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "srZBYbKfrUVh"
-      },
-      "source": [
-        "from scipy import optimize\n",
-        "\n",
-        "r=optimize.bisect(f,1,2)\n",
-        "print('Raiz ',r)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "SlEZiNPdp1PP"
-      },
-      "source": [
-        "xr,tabla=nr() #<--- parametros de funcion\n",
-        "print(xr)\n",
-        "tabla"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "ZKxQeyLdszJh",
-        "outputId": "fd5675f3-bce8-4e45-d0a5-b2ea415241f3",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "source": [
-        "from scipy import optimize\n",
-        "import sympy as sp\n",
-        "\n",
-        "r=optimize.newton(f,1,) #newton/raphson <--- derivada\n",
-        "print(r)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "1.4142135623730951\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "r = optimize.newton(f,x0=,x1=) #secante <--- valores iniciales\n",
-        "print(r)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "mwaND_JecUdj",
-        "outputId": "14b5e5b1-aab8-42eb-ced2-7a6ebe9b304c"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "1.4142135623730954\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "9UZE0DOLObVw"
-      },
-      "source": [
-        "raiz,tabla=muller(f,0,1,2)\n",
-        "print(raiz)\n",
-        "tabla"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "a_K2m085l-D1"
-      },
-      "source": [
-        "def g(v):\n",
-        " n=2\n",
-        " R =0.082\n",
-        " a =3.592\n",
-        " b =0.04267\n",
-        " T =300\n",
-        " P =10\n",
-        " return n*R*T/(P+n **2* a/v **2) +n*b"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "jLNbd28-mD3V"
-      },
-      "source": [
-        "xr,tabla=puntofijo(2,g)\n",
-        "print(xr)\n",
-        "tabla"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "ObP63ZhYmMrh"
-      },
-      "source": [
-        "xr,tabla=wegstein(2,g)\n",
-        "print(xr)\n",
-        "tabla"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "J0kmh4IX-KPk"
-      },
-      "source": [
-        "Grafica de la solucion"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "TbMgf07G99Xd"
-      },
-      "source": [
-        "import plotly.express as xp\n",
-        "x=np.linspace(0.1,6)\n",
-        "\n",
-        "fig = xp.line(x=,y=,\n",
-        "              markers='line+markers',\n",
-        "              labels={'x':'Eje x','y':'Eje y'},\n",
-        "              title='Mi grafica') #<--- completar los parametros a graficar\n",
-        "fig.add_scatter(x=,y=,mode='lines+markers',name=\"equis\")\n",
-        "fig.show()"
-      ],
       "execution_count": null,
       "outputs": []
     },
@@ -738,7 +467,7 @@
         "def df(x):\n",
         "  return 2*x"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -747,9 +476,8 @@
         "id": "nrbz0MiD-3c_"
       },
       "source": [
-        "xr,tabla=nr(f,df,1j) #Se debe dar un valor inicial complejo, por ejemplo 0+1i\n",
-        "print(xr)\n",
-        "tabla"
+        "r=nr(f,df,) #Se debe dar un valor inicial complejo, por ejemplo 0+1i\n",
+        "print(r)"
       ],
       "execution_count": null,
       "outputs": []
@@ -760,9 +488,8 @@
         "id": "3KxDJBAsAJYx"
       },
       "source": [
-        "xr,tabla=muller(f,0,1,2) #se pueden dar valores iniciales reales\n",
-        "print(xr)\n",
-        "tabla"
+        "r = optimize.newton(f,,df) #dar un valor inicial complejo\n",
+        "print(r)"
       ],
       "execution_count": null,
       "outputs": []
@@ -772,7 +499,10 @@
       "metadata": {
         "id": "NQhHpgjnAOK5"
       },
-      "source": [],
+      "source": [
+        "r = optimize.newton(f,x0=,x1=) #dar dos valores complejos\n",
+        "print(r)"
+      ],
       "execution_count": null,
       "outputs": []
     }
