--- a/02ENL.ipynb
+++ b/02ENL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ENL_cerrados.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM5vUc9cesx34xfetVtd066",
+      "authorship_tag": "ABX9TyNjrfyJwaSKCPq0CaJzmQ/1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -475,10 +475,10 @@
       "cell_type": "code",
       "source": [
         "dfx = sp.diff() #<--- obtiene la primera derivada\n",
-        "print('primera derivada ',dfx)\n",
+        "print('1ra derivada ',dfx)\n",
         "\n",
         "dfx2 = sp.diff() #<--- obtiene la segunda derivada\n",
-        "print('segunda derivada ',dfx2)"
+        "print('2da derivada ',dfx2)"
       ],
       "metadata": {
         "id": "xlq_2yfriLYL"
@@ -502,11 +502,11 @@
         "\n",
         "#obtiene un extremo con la raiz de la derivada\n",
         "extremo1 = optimize.newton(,5,) #<--- 1er derivada y 2da derivada\n",
-        "print(f'{\"maximo\" if df2(extremo1)<0 else \"minimo\"} = {extremo1}')\n",
+        "print(f'{\"x max\" if df2(extremo1)<0 else \"x min\"} = {extremo1}')\n",
         "\n",
         "#obtiene el otro extremo cambiando el valor inicial\n",
         "extremo2 = optimize.newton(,9,) #<--- 1er derivada y 2da derivada\n",
-        "print(f'{\"maximo\" if df2(extremo2)<0 else \"minimo\"} = {extremo2}')"
+        "print(f'{\"x max\" if df2(extremo2)<0 else \"x min\"} = {extremo2}')"
       ],
       "metadata": {
         "id": "f8LUYKUFietd"
