--- a/03optimizacion.ipynb
+++ b/03optimizacion.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOStMRCbjjn3+leCNTXEzZd",
+      "authorship_tag": "ABX9TyORg5tLr//ucQyHMZF4JGle",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,23 +60,24 @@
         "1. Comparar los valores de $f_1$ y $f_2$ para determinar en qué subintervalo se encuentra el máximo o mínimo buscado.\n",
         "1. Si $f_1 > f_2$, actualizar el intervalo de búsqueda estableciendo\n",
         "\n",
-        " $b = x_2$\n",
+        "  >>$b = x_2$\n",
         "\n",
-        " $x_2 = x_1$.\n",
+        "  >>$x_2 = x_1$.\n",
         "\n",
-        " Calcular un nuevo valor para $x_1$\n",
+        "  >>Calcular un nuevo valor para $x_1$\n",
         "\n",
-        "  $x_1 = a + \\phi^2 * (b - a)$.\n",
+        "  >>$x_1 = a + \\phi^2 * (b - a)$.\n",
         "\n",
-        " Si no\n",
+        " >Si no\n",
         "\n",
-        " $a = x_1$\n",
+        "  >>$a = x_1$\n",
         "\n",
-        " $x_1 = x_2$.\n",
+        "  >>$x_1 = x_2$.\n",
         "\n",
-        " Calcular un nuevo valor para $x_2$\n",
+        "  >>Calcular un nuevo valor para $x_2$\n",
         "\n",
-        " $x_2 = a + \\phi^2 * (b - a)$.\n",
+        "  >>$x_2 = a + \\phi^2 * (b - a)$.\n",
+        "\n",
         "1. Repetir los pasos 6 a 8 hasta que la diferencia entre $b$ y a sea menor que epsilon.\n",
         "1. El resultado final será el punto medio del intervalo $[a, b]$.\n",
         "\n",
@@ -197,23 +198,10 @@
         "print(dfx2)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "VYsQIs2Vm5V0",
-        "outputId": "0736c602-acc6-4f8c-9b1c-6584a0080176"
+        "id": "VYsQIs2Vm5V0"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "-x/5 + 2*cos(x)\n",
-            "-(2*sin(x) + 1/5)\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -236,22 +224,10 @@
         "print(max)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "F2Nnfq8AnZ6j",
-        "outputId": "10af4a95-ff5a-4602-b30a-c876f1d2f6de"
+        "id": "F2Nnfq8AnZ6j"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "1.4275517787645942\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -270,28 +246,7 @@
         "print(max)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "3zZ2iYd5oLYF",
-        "outputId": "c77be4c0-c23e-47a8-d000-70ae062a65d0"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "1.4275517787645942\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "kS5yUtX7ojao"
+        "id": "3zZ2iYd5oLYF"
       },
       "execution_count": null,
       "outputs": []
