--- a/06integrales.ipynb
+++ b/06integrales.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMzku0zbZ/YAQaNyY9GeTUi",
+      "authorship_tag": "ABX9TyNoCYnkj+4PjJrqwXh1qUja",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,6 +34,17 @@
       },
       "execution_count": 1,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "$$\n",
+        "\\int_0^1e^{x^2}dx\n",
+        "$$"
+      ],
+      "metadata": {
+        "id": "13HhDrJqJGw9"
+      }
     },
     {
       "cell_type": "code",
@@ -220,7 +231,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##Integrales entre dos funciones\n",
+        "##Integral entre dos funciones\n",
         "\n",
         "El área comprendida entre dos funciones es igual al área de la función que está situada por encima menos el área de la función que está situada por debajo.\n",
         "\n",
