--- a/03optimizacion.ipynb
+++ b/03optimizacion.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyORg5tLr//ucQyHMZF4JGle",
+      "authorship_tag": "ABX9TyNGqWAtvXtNiGXbBDJGJScM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -96,12 +96,12 @@
       "metadata": {
         "id": "hwkbvI--hEPO"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "SlSuIiOih-Lt"
       },
@@ -137,7 +137,7 @@
       "metadata": {
         "id": "oM1I5zIxiQea"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -158,11 +158,26 @@
     {
       "cell_type": "code",
       "source": [
-        "max = seccionaurea(f,) #<---- dar los parametros en el intervalo [0,4]\n",
-        "print(max)"
+        "xmax = seccionaurea(f,) #<---- dar los parametros en el intervalo [0,4]\n",
+        "print(f'x del punto maximo {xmax}')\n",
+        "print(f'punto maximo {f(xmax)}')"
       ],
       "metadata": {
         "id": "QKwKBQxtif56"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "xs = np.linspace(0,4) #<---- crear el rango de [0,4]\n",
+        "plt.plot(xs,f(xs),,,'or') #<--- graficar el punto maximo\n",
+        "plt.grid()\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "9_8-RYugW4_Y"
       },
       "execution_count": null,
       "outputs": []
@@ -218,10 +233,11 @@
     {
       "cell_type": "code",
       "source": [
-        "max = newton(func=, #<--- derivada\n",
+        "xmax = newton(func=, #<--- derivada\n",
         "             x0=, #<--- valor inicial\n",
         "             fprime=) #<--- segunda derivada\n",
-        "print(max)"
+        "print(xmax)\n",
+        "print(f(xmax))"
       ],
       "metadata": {
         "id": "F2Nnfq8AnZ6j"
@@ -241,9 +257,10 @@
     {
       "cell_type": "code",
       "source": [
-        "max = newton(func=, #<--- primera derivada\n",
+        "xmax = newton(func=, #<--- primera derivada\n",
         "             x0=,x1=) #<--- valores iniciales\n",
-        "print(max)"
+        "print(xmax)\n",
+        "print(f(xmax))"
       ],
       "metadata": {
         "id": "3zZ2iYd5oLYF"
