--- a/06integrales.ipynb
+++ b/06integrales.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNoCYnkj+4PjJrqwXh1qUja",
+      "authorship_tag": "ABX9TyOJcBYTAvuFPifzozOHMmIb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +32,7 @@
       "metadata": {
         "id": "2IVWtt06dKsA"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -245,7 +245,7 @@
         "f(x)=sin(x)e^{x}\n",
         "$$\n",
         "$$\n",
-        "g(x)=cos(3x)^2\n",
+        "g(x)=2cos(3x)^2\n",
         "$$\n",
         "\n",
         "en el intervalo $[1,3]$"
@@ -261,13 +261,15 @@
         "import matplotlib.pyplot as plt\n",
         "\n",
         "f = lambda x: np.sin(x)*np.exp(x) #primera funcion\n",
-        "g = lambda x: np.cos(3*x)**2      #segunda funcion\n",
+        "g = lambda x: 2*np.cos(3*x)**2    #segunda funcion\n",
+        "\n",
         "a,b = 1,3 #rango a integrar\n",
         "\n",
         "x = np.linspace(a,b)\n",
         "\n",
-        "plt.plot(x,f(x),x,g(x),lw=3)\n",
-        "plt.fill_between(x,f(x),g(x),alpha=0.2,color='yellow')\n",
+        "plt.plot(x,f(x),x,g(x),lw=2) #grafica de las dos funciones\n",
+        "plt.legend(['f(x)','g(x)'])\n",
+        "plt.fill_between(x,f(x),g(x),alpha=0.15,color='yellow') #area entre las dos funciones\n",
         "\n",
         "plt.grid()"
       ],
