--- a/06integrales.ipynb
+++ b/06integrales.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOJcBYTAvuFPifzozOHMmIb",
+      "authorship_tag": "ABX9TyODdYWcBhSNjl+LaF+iPx0b",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -362,7 +362,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##Cuadratura Gaussiana"
+        "##Cuadratura Gaussiana\n",
+        "\n",
+        "$$\n",
+        "\\int_0^3\\frac{e^xsin(x)}{1+x^2}dx\n",
+        "$$"
       ],
       "metadata": {
         "id": "_3vsH2M_ITUe"
@@ -376,8 +380,8 @@
       "source": [
         "from scipy.integrate import quad\n",
         "\n",
-        "f=lambda x:np.exp(x)*np.sin(x)/(1+x**2)\n",
-        "quad(f,0,3)"
+        "f= #<--- funcion a integrar\n",
+        "quad(f,) #<--- integrar la funcion en el rango [0,3]"
       ],
       "execution_count": null,
       "outputs": []
