--- a/03optimizacion.ipynb
+++ b/03optimizacion.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNGqWAtvXtNiGXbBDJGJScM",
+      "authorship_tag": "ABX9TyNuwoX0iduqxxlH2BrR17Qr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -96,12 +96,12 @@
       "metadata": {
         "id": "hwkbvI--hEPO"
       },
-      "execution_count": 1,
+      "execution_count": 39,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 40,
       "metadata": {
         "id": "SlSuIiOih-Lt"
       },
@@ -115,6 +115,8 @@
         "    tabla=[]\n",
         "    titulos=['a','x1','x2','b','f(x1)','f(x2)']\n",
         "    while abs(b - a) > tol:\n",
+        "        it=[a,x1,x2,b,f(x1),f(x2)]\n",
+        "        tabla.append(it)\n",
         "        if f(x1) > f(x2):\n",
         "            b = #<--- asignar el valor de x2, paso 8\n",
         "            x2 = x1\n",
@@ -123,28 +125,45 @@
         "            a = #<--- asignar el valor de x1, paso 8\n",
         "            x1 = x2\n",
         "            x2 = a + phi * (b - a)\n",
-        "        it=[a,x1,x2,b,f(x1),f(x2)]\n",
-        "        tabla.append(it)\n",
+        "\n",
         "    print(tabulate(tabla,titulos,showindex=True))\n",
         "    return #<--- retornar el punto medio, paso 11"
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "La deflexión de una trabe uniforme sujeta a una carga con\n",
+        "distribución creciente en forma lineal, se calcula con\n",
+        "\n",
+        "$$\n",
+        "y=\\frac{w_0}{120EIL}\\left(-x^5+2L^2x^3-L^4x\\right)\n",
+        "$$\n",
+        "\n",
+        "Donde $L = 600 cm$, $E = 50 000 kN/cm^2$, $I = 30 000 cm^4$, y $w_0\n",
+        "= 2.5 kN/cm$, determine el punto de deflexión máximo con los\n",
+        "métodos a) gráfico, b) de la búsqueda de la sección dorada"
+      ],
+      "metadata": {
+        "id": "rqL-GDKWAx_W"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "f = lambda x:2*np.sin(x)-x**2/10"
+        "f = lambda x:"
       ],
       "metadata": {
         "id": "oM1I5zIxiQea"
       },
-      "execution_count": 3,
+      "execution_count": 66,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "import matplotlib.pyplot as plt\n",
-        "xs = np.linspace() #<---- crear el rango de [0,4]\n",
+        "xs = np.linspace() #<---- crear el rango de [0,600]\n",
         "plt.plot() #<--- graficar el rango\n",
         "plt.grid()\n",
         "plt.show()"
@@ -158,7 +177,7 @@
     {
       "cell_type": "code",
       "source": [
-        "xmax = seccionaurea(f,) #<---- dar los parametros en el intervalo [0,4]\n",
+        "xmax = seccionaurea(f,) #<---- dar los parametros en el intervalo [0,600]\n",
         "print(f'x del punto maximo {xmax}')\n",
         "print(f'punto maximo {f(xmax)}')"
       ],
@@ -171,8 +190,9 @@
     {
       "cell_type": "code",
       "source": [
-        "xs = np.linspace(0,4) #<---- crear el rango de [0,4]\n",
+        "xs = np.linspace() #<---- crear el rango de [0,600]\n",
         "plt.plot(xs,f(xs),,,'or') #<--- graficar el punto maximo\n",
+        "#plt.vlines(xmax,0,f(xmax),linestyles='dashdot')\n",
         "plt.grid()\n",
         "plt.show()"
       ],
@@ -199,18 +219,23 @@
       "metadata": {
         "id": "hLunpJiKioY3"
       },
-      "execution_count": null,
+      "execution_count": 69,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "x = sp.Symbol('x')\n",
+        "\n",
         "fx = 2*sp.sin(x)-x**2/10\n",
         "dfx = sp.diff() #<--- obtener la primera derivada\n",
         "dfx2 = sp.diff() #<--- obtener la segunda derivada\n",
+        "\n",
+        "print(fx)\n",
         "print(dfx)\n",
-        "print(dfx2)"
+        "print(dfx2)\n",
+        "\n",
+        "sp.plot(fx)"
       ],
       "metadata": {
         "id": "VYsQIs2Vm5V0"
@@ -227,7 +252,20 @@
       "metadata": {
         "id": "EQyTRHPKnRaz"
       },
-      "execution_count": null,
+      "execution_count": 37,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "f = sp.lambdify(x,fx)\n",
+        "df = sp.lambdify(x,dfx)\n",
+        "df2 = sp.lambdify(x,dfx2)"
+      ],
+      "metadata": {
+        "id": "B4RGz3pXCJ1N"
+      },
+      "execution_count": 36,
       "outputs": []
     },
     {
