--- a/03optimizacion.ipynb
+++ b/03optimizacion.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNuwoX0iduqxxlH2BrR17Qr",
+      "authorship_tag": "ABX9TyPSXBEoeK9C6ungLvWv8voV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -96,12 +96,12 @@
       "metadata": {
         "id": "hwkbvI--hEPO"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": null,
       "metadata": {
         "id": "SlSuIiOih-Lt"
       },
@@ -156,7 +156,7 @@
       "metadata": {
         "id": "oM1I5zIxiQea"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -219,7 +219,7 @@
       "metadata": {
         "id": "hLunpJiKioY3"
       },
-      "execution_count": 69,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -228,8 +228,8 @@
         "x = sp.Symbol('x')\n",
         "\n",
         "fx = 2*sp.sin(x)-x**2/10\n",
-        "dfx = sp.diff() #<--- obtener la primera derivada\n",
-        "dfx2 = sp.diff() #<--- obtener la segunda derivada\n",
+        "dfx = sp.diff(fx,x) #<--- obtener la primera derivada\n",
+        "dfx2 = sp.diff(fx,x,2) #<--- obtener la segunda derivada\n",
         "\n",
         "print(fx)\n",
         "print(dfx)\n",
@@ -246,13 +246,13 @@
     {
       "cell_type": "code",
       "source": [
-        "from scipy.optimize import newton\n",
+        "from scipy.optimize import newton,minimize\n",
         "import numpy as np"
       ],
       "metadata": {
         "id": "EQyTRHPKnRaz"
       },
-      "execution_count": 37,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -265,7 +265,18 @@
       "metadata": {
         "id": "B4RGz3pXCJ1N"
       },
-      "execution_count": 36,
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "minimize(f,1)"
+      ],
+      "metadata": {
+        "id": "vCZvzW9qAjv_"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
