--- a/03optimizacion.ipynb
+++ b/03optimizacion.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPSXBEoeK9C6ungLvWv8voV",
+      "authorship_tag": "ABX9TyNq/m7NNhjBeKWSmnF1znuD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -177,9 +177,9 @@
     {
       "cell_type": "code",
       "source": [
-        "xmax = seccionaurea(f,) #<---- dar los parametros en el intervalo [0,600]\n",
-        "print(f'x del punto maximo {xmax}')\n",
-        "print(f'punto maximo {f(xmax)}')"
+        "xopt = seccionaurea(f,) #<---- dar los parametros en el intervalo [0,600]\n",
+        "print(f'x del punto maximo {xopt}')\n",
+        "print(f'punto maximo {f(xopt)}')"
       ],
       "metadata": {
         "id": "QKwKBQxtif56"
@@ -219,7 +219,7 @@
       "metadata": {
         "id": "hLunpJiKioY3"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -252,7 +252,7 @@
       "metadata": {
         "id": "EQyTRHPKnRaz"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -265,7 +265,7 @@
       "metadata": {
         "id": "B4RGz3pXCJ1N"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -282,11 +282,11 @@
     {
       "cell_type": "code",
       "source": [
-        "xmax = newton(func=, #<--- derivada\n",
+        "xopt = newton(func=, #<--- derivada\n",
         "             x0=, #<--- valor inicial\n",
         "             fprime=) #<--- segunda derivada\n",
-        "print(xmax)\n",
-        "print(f(xmax))"
+        "print(xopt)\n",
+        "print(f(xopt))"
       ],
       "metadata": {
         "id": "F2Nnfq8AnZ6j"
@@ -306,10 +306,10 @@
     {
       "cell_type": "code",
       "source": [
-        "xmax = newton(func=, #<--- primera derivada\n",
+        "xopt = newton(func=, #<--- primera derivada\n",
         "             x0=,x1=) #<--- valores iniciales\n",
-        "print(xmax)\n",
-        "print(f(xmax))"
+        "print(xopt)\n",
+        "print(f(xopt))"
       ],
       "metadata": {
         "id": "3zZ2iYd5oLYF"
