--- a/03optimizacion.ipynb
+++ b/03optimizacion.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNq/m7NNhjBeKWSmnF1znuD",
+      "authorship_tag": "ABX9TyNFplVMByNQfT4ANJzcec27",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -192,7 +192,7 @@
       "source": [
         "xs = np.linspace() #<---- crear el rango de [0,600]\n",
         "plt.plot(xs,f(xs),,,'or') #<--- graficar el punto maximo\n",
-        "#plt.vlines(xmax,0,f(xmax),linestyles='dashdot')\n",
+        "#plt.vlines(xopt,0,f(xopt),linestyles='dashdot')\n",
         "plt.grid()\n",
         "plt.show()"
       ],
