--- a/04SistemasEcuacionesLineales.ipynb
+++ b/04SistemasEcuacionesLineales.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO4MlUtbh70TlFaC1QhVJ8M",
+      "authorship_tag": "ABX9TyOLJBrG7dYKJTabkEXYXEbv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -701,7 +701,7 @@
       "source": [
         "def sor(A,b,x,w=1,imax =100,tol=1e-8) :\n",
         "  '''\n",
-        "  El metodo SOR es un metodo iterativo para resolver sistemas de ecuaciones\n",
+        "  El metodo SOR (Succesive Over Relaxation) es un metodo iterativo para resolver sistemas de ecuaciones\n",
         "  lineales. Se utiliza el factor w para hacer la relajacion\n",
         "  Argumentos:\n",
         "  ---\n",
