--- a/06integrales.ipynb
+++ b/06integrales.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyODdYWcBhSNjl+LaF+iPx0b",
+      "authorship_tag": "ABX9TyNLgajzM346MZR0Tyw4zw3n",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -161,7 +161,7 @@
         "h = (b-a)/n\n",
         "x = np.linspace(a,b,n+1)\n",
         "trapc = h/2 * (f(x[0]) + 2*sum(f(x[1:n])) + f(x[n]))\n",
-        "print(f'trapecios compuesta = {rectc} usando {n} intervalos')"
+        "print(f'trapecios compuesta = {trapc} usando {n} intervalos')"
       ],
       "metadata": {
         "id": "aAYwJruFjOJY"
