--- a/01Interpolacion.ipynb
+++ b/01Interpolacion.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMJO2yfi9pIpwOEbsFrY3Vj",
+      "authorship_tag": "ABX9TyMfNjceMral5ThScvC52nG8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,9 +59,12 @@
       "source": [
         "import numpy as np #crear arreglos de datos, algebra lineal.\n",
         "from scipy import interpolate #metodos de interpolacion\n",
-        "import matplotlib.pyplot as plt #graficar"
+        "import matplotlib.pyplot as plt #graficar\n",
+        "# importar seaborn asignar tema\n",
+        "import seaborn as sns\n",
+        "sns.set_theme()"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -73,13 +76,17 @@
         "x=np.array([4.1,12.2,20.3,28.2,38.1,45.2]) #variable independiente\n",
         "y=np.array([1.0276,1.1013,1.1801,1.2652,1.3480,1.4120]) #variable dependiente"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wcEJajaC5fGp"
+        "id": "wcEJajaC5fGp",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3b391183-a868-4eb1-d95a-f8f2039d0c7a"
       },
       "source": [
         "xi= #<---- dato a interpolar\n",
@@ -87,8 +94,16 @@
         "yi= #<---- interpolacion\n",
         "print(yi)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1.1285395061728394\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -97,7 +112,7 @@
       },
       "source": [
         "plt.plot(x,y,'o:g') #<---- dato interpolado\n",
-        "plt.grid()\n",
+        "#plt.grid()\n",
         "plt.title('Densidad del carbonaro de potasio',fontsize=16)\n",
         "plt.xlabel('Concentracion')\n",
         "plt.ylabel('Densidad')\n",
@@ -230,7 +245,7 @@
         "from scipy.interpolate import lagrange,CubicSpline\n",
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -243,7 +258,7 @@
         "y = np.exp(-(5*x)**2) + x #1/(1+25*x**2)\n",
         "xi = -0.95"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -357,7 +372,7 @@
       "metadata": {
         "id": "spRAK-l4HgCu"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -370,7 +385,7 @@
       "metadata": {
         "id": "xXxX2GgQLGDQ"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
