--- a/EcLaplaceDirichlet.ipynb
+++ b/EcLaplaceDirichlet.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOnQV/NMeERpdo9JWyz5b5Z",
+      "authorship_tag": "ABX9TyM6JbszsVkaAOW+d4AuzcNZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,7 +56,7 @@
         "Tright = 0\n",
         "\n",
         "# valor inicial al interior de la placa\n",
-        "Tguess = 0.25*(Ttop+Tbottom+Tleft+Tright)\n",
+        "Tguess = 0.25 * (Ttop + Tbottom + Tleft + Tright)\n",
         "\n",
         "# colores de intepolación\n",
         "colorinterpolation = 50\n",
