--- a/01Interpolacion.ipynb
+++ b/01Interpolacion.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMfNjceMral5ThScvC52nG8",
+      "authorship_tag": "ABX9TyOSL04DsD6xBcnVbwBu685Z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -94,7 +94,7 @@
         "yi= #<---- interpolacion\n",
         "print(yi)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -372,7 +372,7 @@
       "metadata": {
         "id": "spRAK-l4HgCu"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -385,7 +385,7 @@
       "metadata": {
         "id": "xXxX2GgQLGDQ"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -420,15 +420,56 @@
       "cell_type": "code",
       "source": [
         "#            interpolacion Spline cubico\n",
-        "p_spline = #<----crear polinomio Spline cubico\n",
-        "O2_spline = #<----interpolar\n",
+        "p_spline = CubicSpline(x,y)#<----crear polinomio Spline cubico\n",
+        "xi = 27\n",
+        "O2_spline = p_spline(xi)#<----interpolar\n",
         "print(O2_spline)"
       ],
       "metadata": {
-        "id": "0rXGYPCwM8Gg"
+        "id": "0rXGYPCwM8Gg",
+        "outputId": "25c234ca-a397-48f3-94ae-1270754780a9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1.2530730816680418\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(len(p_spline.c[0])):\n",
+        "  print(p_spline.c[:,i])"
+      ],
+      "metadata": {
+        "id": "bo2sDu0pqbuV",
+        "outputId": "f8b41f20-d64b-48f1-c662-c46a79484ef0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[ 4.61982060e-06 -7.33956142e-05  9.39016348e-03  1.02760000e+00]\n",
+            "[4.61982060e-06 3.88660265e-05 9.11047382e-03 1.10130000e+00]\n",
+            "[-1.71635861e-05  1.51127667e-04  1.06494227e-02  1.18010000e+00]\n",
+            "[ 1.09260587e-05 -2.55649323e-04  9.82370165e-03  1.26520000e+00]\n",
+            "[1.09260587e-05 6.88546198e-05 7.97443409e-03 1.34800000e+00]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
