--- a/01Interpolacion.ipynb
+++ b/01Interpolacion.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOSL04DsD6xBcnVbwBu685Z",
+      "authorship_tag": "ABX9TyN1DPD9WJe2k89R28gymW40",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -64,7 +64,7 @@
         "import seaborn as sns\n",
         "sns.set_theme()"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -76,7 +76,7 @@
         "x=np.array([4.1,12.2,20.3,28.2,38.1,45.2]) #variable independiente\n",
         "y=np.array([1.0276,1.1013,1.1801,1.2652,1.3480,1.4120]) #variable dependiente"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -372,7 +372,7 @@
       "metadata": {
         "id": "spRAK-l4HgCu"
       },
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -385,7 +385,7 @@
       "metadata": {
         "id": "xXxX2GgQLGDQ"
       },
-      "execution_count": 4,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -420,53 +420,24 @@
       "cell_type": "code",
       "source": [
         "#            interpolacion Spline cubico\n",
-        "p_spline = CubicSpline(x,y)#<----crear polinomio Spline cubico\n",
-        "xi = 27\n",
-        "O2_spline = p_spline(xi)#<----interpolar\n",
+        "p_spline = CubicSpline()#<----crear polinomio Spline cubico\n",
+        "O2_spline = p_spline()#<----interpolar\n",
         "print(O2_spline)"
       ],
       "metadata": {
         "id": "0rXGYPCwM8Gg",
-        "outputId": "25c234ca-a397-48f3-94ae-1270754780a9",
+        "outputId": "9d114fd4-a25c-40c8-e79e-ab9faf728d59",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1.2530730816680418\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "for i in range(len(p_spline.c[0])):\n",
-        "  print(p_spline.c[:,i])"
-      ],
-      "metadata": {
-        "id": "bo2sDu0pqbuV",
-        "outputId": "f8b41f20-d64b-48f1-c662-c46a79484ef0",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 14,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[ 4.61982060e-06 -7.33956142e-05  9.39016348e-03  1.02760000e+00]\n",
-            "[4.61982060e-06 3.88660265e-05 9.11047382e-03 1.10130000e+00]\n",
-            "[-1.71635861e-05  1.51127667e-04  1.06494227e-02  1.18010000e+00]\n",
-            "[ 1.09260587e-05 -2.55649323e-04  9.82370165e-03  1.26520000e+00]\n",
-            "[1.09260587e-05 6.88546198e-05 7.97443409e-03 1.34800000e+00]\n"
+            "7.967888020833333\n"
           ]
         }
       ]
